- Fixed Jabber message sending and receiving (formatting is not yet supported)
- Fixed MSN and Yahoo reconnect behavior to not attempt a reconnect if you sign on from another location
- An attempt to connect with an invalid password now reprompts for a correct password
- ICQ contacts and accounts are now differentiated from AIM contacts in tooltips and the account lists, respectively
- Fixed address book integration for contacts with spaces in their screennames
- Fixed retrieval of AIM away messages and profiles which contain non-Roman characters
- Fixed autocompletion in the New Message window
- Fixed issues related to the applescript-based substitutions
- Fixed problems related to idle messages
- Fixed problems related to status-based tab coloration
- Fixed vertical resize behavior when deleting groups or when groupless contacts sign on or off
- Fixed a crash when editing saved away messages
- Fixed a crash when deleting a new account
- Fixed a crash when dragging text across the message window tabs
- Fixed a crash if an improperly formed emoticon pack was installed
- Fixed a crash when going away automatically after a certain amount of time idle.
- Fixed a crash if an invalid move was attempted in games
- Fixed several crashes specific to running in OS X 10.2
- Version checker now informs the user if the attempt to check for the latest version failed
- No longer show a blank profile when an AIM account attempts to get the profile of an AOL account (which can not be done)
- Speed improvements: launch time, creation of new accounts
- Cosmetic improvements to the account preferences

Version 0.51 (4/08/2004)
- Adium now works in 10.2 (Fixed crash on launch in 10.2)
- Fixed a crash when opening preference window
- Fixed a crash in the theme preferences
- Fixed resizing issues with the advanced preferences
- Fixed a crash in the contact alert window
- Fixed a crash when completing file transfers
- Cleaned up the 'auto-away' preferences

Version 0.50 (4/06/2004)